we have added an image

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Favorite animal</h1>
     <p> ELEPHANT</p>
-   
+   <img src="https://images.pexels.com/photos/1054655/pexels-photo-1054655.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
     
 </body>
 </html>
