added header block element

--- a/my-favorite-things.html
+++ b/my-favorite-things.html
@@ -7,8 +7,11 @@
     <title>My favorite things</title>
 </head>
 <body>
+    <h1>My favorite things</h1>
+        <h2>written with a little guidance from moringa school</h2>
     <p>Hello, world!</p>
     <p>This is my favorite things!</p>
+    
     
 </body>
 </html>
