added some list

--- a/my-favorite-things.html
+++ b/my-favorite-things.html
@@ -11,7 +11,13 @@
         <h2>written with a little guidance from moringa school</h2>
     <p>Hello, world!</p>
     <p>This is my favorite things!</p>
-    
-    
+    <p>Here are something I'm going to learn about coding</p>
+    <ul>
+        <li>Html</li>
+        <li>Css</li>
+        <li>Js</li>
+        <li>Python</li>
+
+    </ul>
 </body>
 </html>
