added un ordered list

--- a/my-favorite-things.html
+++ b/my-favorite-things.html
@@ -19,5 +19,12 @@
         <li>Python</li>
 
     </ul>
+    <p>Here are some tags of Html</p>
+    <ol>
+        <li>image tag</li>
+        <li>paragraph tag</li>
+        <li>head tag</li>
+
+    </ol>
 </body>
 </html>
