change name of my-first-webpage.html to index.html

--- a/my-favorite-things.html
+++ b/my-favorite-things.html
@@ -14,17 +14,21 @@
     <p>This is my favorite things!</p>
     <p>Here are something I'm going to learn about coding</p>
     <ul>
+        <strong>
         <li>Html</li>
         <li>Css</li>
         <li>Js</li>
         <li>Python</li>
+        </strong>
 
     </ul>
     <p>Here are some tags of Html</p>
     <ol>
+        <strong>
         <li>image tag</li>
         <li>paragraph tag</li>
         <li>head tag</li>
+        </strong>
 
     </ol>
 </body>
